--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
     </div>
 
     <script>
-        const PROXY_URL = 'https://script.google.com/macros/s/AKfycbwmOwIYOV-dTqynZDAAYnJwWW9wOZubnpTducblAZOuPNUT36-q3r6LORlmZiqAyS0g/exec';
+        const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSLwX3_NEYRLeNv8UmKxsL9vrTHmHwMcSWtu7uGuIUyV79m8Qhw6jLJtxOPjIEzxNt1Ks7nqYaKnlb2/pub?gid=0&single=true&output=csv';
+        const PROXY_URL = 'https://script.google.com/macros/s/AKfycby39MMYoXJIekh9cw-JZpHhmp_AiYCXiYVFIKpqeIcRKreuApLn_Y1CE7Sk6FVEEowjnA/exec';
         const urlParams = new URLSearchParams(window.location.search);
         const code = urlParams.get('c');
         if (!code) { showError(); } else { loadCertificate(code); }
@@ -407,24 +408,33 @@
             }, 250);
         }
 
-        async function loadCertificate(code) {
+async function loadCertificate(code) {
             try {
-                const response = await fetch(PROXY_URL + '?type=cert&c=' + encodeURIComponent(code));
-                const data = await response.json();
+                const response = await fetch(CSV_URL);
+                const csvText = await response.text();
+                const rows = csvText.split('\n');
 
-                if (data.error) { showError(); return; }
+                let found = null;
+                for (let i = 1; i < rows.length; i++) {
+                    const cols = parseCSVRow(rows[i]);
+                    if (cols[19] && cols[19].trim() === code) {
+                        found = cols;
+                        break;
+                    }
+                }
+                if (!found) { showError(); return; }
 
-                const name     = data.name || '';
-                const name2    = data.name2 || '';
-                const product  = data.product || '';
-                const pdfLink     = data.pdf || '';
-                const pdfName     = data.pdfName || '';
-                const themeLink   = data.theme || '';
-                const themeName   = data.themeName || '';
-                const voiceLink   = data.voice || '';
-                const voiceName   = data.voiceName || '';
-                const healingLink = data.healing || '';
-                const healingName = data.healingName || '';
+                const name = found[1] || found[3] || '';
+                const name2 = found[2] || '';
+                const product = found[4] || '';
+                const pdfLink = found[10] || '';
+                const pdfName = found[11] || '';
+                const themeLink = found[12] || '';
+                const themeName = found[13] || '';
+                const voiceLink = found[14] || '';
+                const voiceName = found[15] || '';
+                const healingLink = found[16] || '';
+                const healingName = found[17] || '';
 
                 document.getElementById('clientName').textContent = name;
                 document.getElementById('productTag').textContent = product;
@@ -449,7 +459,6 @@
                     document.getElementById('btnPdf').classList.add('active');
                     if (pdfName) document.getElementById('btnPdfText').textContent = pdfName;
                 }
-
                 if (themeLink) {
                     document.getElementById('btnTheme').classList.add('active');
                     if (themeName) document.getElementById('btnThemeText').textContent = themeName;
@@ -481,6 +490,7 @@
                 showError();
             }
         }
+
 
         function showError() {
             document.getElementById('loading').style.display = 'none';
