--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         .honorific { font-size: 16px; color: #a09880; margin-bottom: 32px; }
         .divider { height: 1px; background: linear-gradient(90deg, transparent, #c9a84c33, #c9a84c, #c9a84c33, transparent); margin: 24px 0; }
         .message { font-size: 14px; color: #a09880; line-height: 1.8; margin-bottom: 36px; font-weight: 300; }
+        .sore-line { font-family: 'Noto Serif KR', serif; font-size: 20px; color: #c9a84c; font-weight: 700; line-height: 2.2; letter-spacing: 1px; text-shadow: 0 0 30px rgba(201, 168, 76, 0.2); }
         .product-tag { display: inline-block; padding: 4px 16px; border: 1px solid #c9a84c33; border-radius: 20px; font-size: 12px; color: #c9a84c; margin-bottom: 24px; letter-spacing: 1px; }
         .buttons { display: flex; flex-direction: column; gap: 0; margin-bottom: 16px; }
         .btn-item { margin-bottom: 12px; }
@@ -435,7 +436,7 @@ async function loadCertificate(code) {
                 const voiceName = found[15] || '';
                 const healingLink = found[16] || '';
                 const healingName = found[17] || '';
-
+                const soreLine = (found[28] || '').trim();
                 document.getElementById('clientName').textContent = name;
                 document.getElementById('productTag').textContent = product;
                 const isCouple = product.includes('우리');
@@ -448,6 +449,9 @@ async function loadCertificate(code) {
                     document.getElementById('certTitle').textContent = '운 명 궁 합 보 증 서';
                     document.getElementById('honorific').textContent = '님의 궁합 분석이 완성되었습니다';
                     document.getElementById('message').innerHTML = '두 분의 사주 오행과 MBTI 심리 유형을<br>분석하여 조율된 맞춤형 솔루션입니다';
+                }
+                                if (soreLine) {
+                    document.getElementById('message').innerHTML = '<span class="sore-line">"' + soreLine + '"</span>';
                 }
                 var subtitleText = isCouple ? '두 분을 위한' : '당신만을 위한';
 
