--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         .divider { height: 1px; background: linear-gradient(90deg, transparent, #c9a84c33, #c9a84c, #c9a84c33, transparent); margin: 24px 0; }
         .message { font-size: 14px; color: #a09880; line-height: 1.8; margin-bottom: 36px; font-weight: 300; }
         .sore-line { font-family: 'Noto Serif KR', serif; font-size: 20px; color: #c9a84c; font-weight: 700; line-height: 2.2; letter-spacing: 1px; text-shadow: 0 0 30px rgba(201, 168, 76, 0.2); }
+        .player-desc { font-size: 12px; color: #8a7a5a; font-style: italic; line-height: 1.6; margin-top: 8px; padding: 8px 12px; border-left: 2px solid #c9a84c33; }
         .product-tag { display: inline-block; padding: 4px 16px; border: 1px solid #c9a84c33; border-radius: 20px; font-size: 12px; color: #c9a84c; margin-bottom: 24px; letter-spacing: 1px; }
         .buttons { display: flex; flex-direction: column; gap: 0; margin-bottom: 16px; }
         .btn-item { margin-bottom: 12px; }
@@ -125,6 +126,7 @@
                             </div>
                         </div>
                         <div class="player-bottom">
+                            <div class="player-desc" id="themeDesc" style="display:none;"></div>
                             <a href="#" class="player-download" id="themeDownload" target="_blank">⬇ 다운로드</a>
                         </div>
                     </div>
@@ -147,6 +149,7 @@
                                 <div class="player-time"><span id="voiceCurrent">0:00</span><span id="voiceDuration">0:00</span></div>
                             </div>
                         </div>
+                            <div class="player-desc" id="voiceDesc" style="display:none;"></div>
                         <div class="player-bottom">
                             <a href="#" class="player-download" id="voiceDownload" target="_blank">⬇ 다운로드</a>
                         </div>
@@ -171,6 +174,7 @@
                             </div>
                         </div>
                         <div class="player-bottom">
+                            <div class="player-desc" id="healingDesc" style="display:none;"></div>                            
                             <a href="#" class="player-download" id="healingDownload" target="_blank">⬇ 다운로드</a>
                         </div>
                     </div>
@@ -252,13 +256,6 @@
             var loading = document.getElementById('pdfOverlayLoading');
             document.getElementById('pdfOverlayTitle').textContent = '📜 ' + pdfViewerData.title;
             document.getElementById('pdfOverlayDownload').href = pdfViewerData.downloadUrl;
-            ['theme', 'voice', 'healing'].forEach(function(t) {
-                if (audioPlayers[t]) audioPlayers[t].pause();
-                var pb = document.getElementById(t + 'PlayBtn');
-                var bb = document.getElementById('btn' + t.charAt(0).toUpperCase() + t.slice(1));
-                if (pb) pb.textContent = '▶';
-                if (bb) bb.classList.remove('playing');
-            });
             loading.style.display = 'flex';
             frame.style.display = 'none';
             overlay.classList.add('open');
@@ -437,6 +434,9 @@ async function loadCertificate(code) {
                 const healingLink = found[16] || '';
                 const healingName = found[17] || '';
                 const soreLine = (found[28] || '').trim();
+                const themeDesc = (found[29] || '').trim();
+                const voiceDesc = (found[30] || '').trim();
+                const healingDesc = (found[31] || '').trim();         
                 document.getElementById('clientName').textContent = name;
                 document.getElementById('productTag').textContent = product;
                 const isCouple = product.includes('우리');
@@ -470,6 +470,7 @@ async function loadCertificate(code) {
                     document.getElementById('themeSubtitle').textContent = subtitleText + ' 음원';
                     document.getElementById('themeDownload').href = toDirectLink(themeLink);
                     audioFileIds['theme'] = extractFileId(themeLink);
+                    if (themeDesc) { document.getElementById('themeDesc').textContent = themeDesc; document.getElementById('themeDesc').style.display = 'block'; }
                 }
                 if (voiceLink) {
                     document.getElementById('btnVoice').classList.add('active');
@@ -478,6 +479,7 @@ async function loadCertificate(code) {
                     document.getElementById('voiceSubtitle').textContent = subtitleText + ' 해설';
                     document.getElementById('voiceDownload').href = toDirectLink(voiceLink);
                     audioFileIds['voice'] = extractFileId(voiceLink);
+                    if (voiceDesc) { document.getElementById('voiceDesc').textContent = voiceDesc; document.getElementById('voiceDesc').style.display = 'block'; }
                 }
                 if (healingLink) {
                     document.getElementById('btnHealing').classList.add('active');
@@ -486,6 +488,7 @@ async function loadCertificate(code) {
                     document.getElementById('healingSubtitle').textContent = subtitleText + ' 음악';
                     document.getElementById('healingDownload').href = toDirectLink(healingLink);
                     audioFileIds['healing'] = extractFileId(healingLink);
+                    if (healingDesc) { document.getElementById('healingDesc').textContent = healingDesc; document.getElementById('healingDesc').style.display = 'block'; }                    
                 }
 
                 document.getElementById('loading').style.display = 'none';
