--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         .intro-symbol { font-size: 20px; color: #c9a84c; margin-bottom: 24px; opacity: 0; animation: introSymbol 2s ease forwards 0.6s; text-shadow: 0 0 40px rgba(201,168,76,0.6), 0 0 80px rgba(201,168,76,0.3); }
         @keyframes introSymbol { 0% { opacity: 0; transform: scale(0.5) rotate(0deg); } 50% { opacity: 1; transform: scale(1.2) rotate(180deg); } 100% { opacity: 1; transform: scale(1) rotate(360deg); } }
         .intro-title { font-family: 'Noto Serif KR', serif; font-size: 14px; color: #8a7a5a; letter-spacing: 2px; margin-bottom: 40px; opacity: 0; animation: introFadeIn 1s ease forwards 0.9s; line-height: 1.8; }
+        .intro-sore { font-family: 'Noto Serif KR', serif; font-size: 17px; color: #c9a84c; font-style: italic; letter-spacing: 1px; margin-bottom: 32px; opacity: 0; animation: introFadeIn 1.2s ease forwards 1.1s; text-shadow: 0 0 20px rgba(201,168,76,0.3); }
+        <div class="intro-sore" id="introSore"></div>
         .intro-btn { display: inline-block; padding: 16px 48px; border: 1px solid #c9a84c44; border-radius: 4px; background: transparent; color: #c9a84c; font-family: 'Noto Serif KR', serif; font-size: 15px; letter-spacing: 3px; cursor: pointer; transition: all 0.4s ease; opacity: 0; animation: introFadeIn 1s ease forwards 1.2s; position: relative; overflow: hidden; }
         .intro-btn::before { content: ''; position: absolute; top: 50%; left: 50%; width: 0; height: 0; background: rgba(201,168,76,0.1); border-radius: 50%; transform: translate(-50%,-50%); transition: all 0.6s ease; }
         .intro-btn:hover { border-color: #c9a84c; box-shadow: 0 0 30px rgba(201,168,76,0.2), inset 0 0 30px rgba(201,168,76,0.05); }
@@ -340,7 +342,7 @@
                 var nameText = certData.name;
                 if (isCouple && certData.name2) nameText += ' & ' + certData.name2;
                 document.getElementById('introTitle').textContent = nameText + '님의 ' + (isCouple ? '궁합' : '운명') + ' 분석이 완성되었습니다';
-
+if (certData.soreLine) { document.getElementById('introSore').textContent = '"' + certData.soreLine + '"'; }
                 document.getElementById('loading').style.display = 'none';
                 document.getElementById('intro').style.display = 'flex';
 
