--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,6 @@
             .catch(function(err) { console.error('BGM preload fetch error:', err); });
     }
 
-    /* ── 변경: startBgm — audio.loop = true 추가 ── */
     function startBgm() {
         var audio = audioPlayers['theme'];
         if (!audio) return;
@@ -1199,18 +1198,34 @@
         audio.loop = true;
         audio.play().then(function() {
             bgmType = 'theme';
+            audioLoaded['theme'] = true;
             document.getElementById('bgmBar').classList.add('active');
             document.getElementById('bgmBtn').textContent = '⏸';
             document.getElementById('bgmTitle').textContent = '♪ ' + (certData.themeName || '맞춤형 음원');
             document.getElementById('bgmSub').textContent = '배경음악 재생 중';
+
+            // 테마곡 섹션 플레이어도 동기화
+            document.getElementById('themePlayBtn').textContent = '⏸';
+            document.getElementById('btnTheme').classList.add('playing');
+            startProgressUpdate('theme');
+
+            // duration 표시
+            if (audio.duration) {
+                document.getElementById('themeDuration').textContent = formatTime(audio.duration);
+            } else {
+                audio.addEventListener('loadedmetadata', function() {
+                    document.getElementById('themeDuration').textContent = formatTime(audio.duration);
+                });
+            }
         }).catch(function(e) {
             console.log('BGM autoplay blocked:', e);
             document.getElementById('bgmBar').classList.add('active');
             document.getElementById('bgmBtn').textContent = '▶';
-            document.getElementById('bgmSub').textContent = '터치하여 재생';
+            document.getElementById('bgmSub').textContent = '터치하며 재생';
             bgmType = 'theme';
         });
     }
+
 
     function toggleBgm() {
         if (!bgmType || !audioPlayers[bgmType]) return;
@@ -1256,6 +1271,7 @@
         // BGM으로 이미 로드된 테마곡 재사용
         if (type === 'theme' && audioLoaded['theme'] && audioPlayers['theme']) {
             if (loadingEl) loadingEl.style.display = 'none';
+            playPause('theme');
             return;
         }
 
@@ -1320,6 +1336,7 @@
                     clearInterval(playerIntervals[t]);
                 }
             });
+            if (type === 'theme') audio.loop = true;
             audio.play().catch(function(){});
             document.getElementById(type + 'PlayBtn').textContent = '⏸';
             document.getElementById('btn' + capitalize(type)).classList.add('playing');
