--- a/index.html
+++ b/index.html
@@ -1206,14 +1206,8 @@
             document.getElementById('bgmTitle').textContent = '♪ ' + (certData.themeName || '맞춤형 음원');
             document.getElementById('bgmSub').textContent = '배경음악 재생 중';
 
-            // 테마곡 패널 자동 열기
-            var wrap = document.getElementById('playerTheme');
-            if (wrap) wrap.classList.add('open');
-            var btn = document.getElementById('btnTheme');
-            if (btn) btn.classList.add('playing');
-
-            // 테마곡 섹션 플레이어 동기화
-            document.getElementById('themePlayBtn').textContent = '⏸';
+            // 테마곡 섹션 버튼만 playing 표시 (패널은 열지 않음)
+            document.getElementById('btnTheme').classList.add('playing');
             startProgressUpdate('theme');
 
             // duration 표시
@@ -1232,6 +1226,7 @@
             bgmType = 'theme';
         });
     }
+
 
 
 
